# sip-control-flow-integrity

./: CMakeLists.txt  README.md  memoryTrace.c  memoryTrace3.c  something.c  something_loop.c
Documentation/: Authenticate_Caller.xml  Documentation.tex
Slides/: PresentationPhase2.pptx
attack/: modifyGraph.sh  patchStackVerif.py
code/: CMakeLists.txt  FunctionPass.cpp  Graph.cpp  Graph.h  StackAnalysis.c  StackAnalysis.cpp  ThePass.cpp  compile.sh  hashes.txt  patchChecksum.py  pwntools_install.sh
